Exploring java 17 & 21